--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,7 +1,16 @@
 [target.thumbv7em-none-eabihf]
 runner = "arm-none-eabi-gdb -q -tui -x openocd.gdb"
 rustflags = [
-  "-C", "link-arg=-Tlink.x",
+  # "-C", "link-arg=-Tlink.x",
+  "-C", "linker=lld",
+  # "-Z", "linker-flavor=ld.lld",
+  # "-C", "linker=arm-none-eabi-ld",
+  # "-Z", "linker-flavor=ld",
+  # "-C", "linker=lld",
+  # "-Z", "linker-flavor=ld.lld",
+  # "-C", "linker=arm-none-eabi-ld",
+  # "-Z", "linker-flavor=ld",
+  # "-Z", "thinlto=no",
 ]
 
 [build]
