--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,7 +1,9 @@
-source [find interface/stlink-v2-1.cfg]
-transport select hla_swd
-source [find target/stm32f7x.cfg]
+# This is for using the onboard STLINK.
+# source [find interface/stlink-v2-1.cfg]
+source [find interface/stlink.cfg]
 
+transport select hla_swd
+
+source [find target/stm32f7x.cfg]
 init
-arm semihosting enable
 reset
